--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
 </head>
 
 <body>
-    asdfs
+    <header>
+        <div class="logo">
+            <a href="/">
+                <img class="logo" src="logo.png" alt="Gourmet Garden">
+            </a>
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Forside</a></li>
+                <li><a href="bes"></a></li>
+                <li><a href="menukort.html">Menukort</a></li>
+                <li><a href="galleri.html">Galleri</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </nav>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+
+
 </body>
 
 </html>
