1. redigering af skellet og menu

--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Forside</title>
+    <link rel="stylesheet" href="menu.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
             <a href="/">
-                <img class="logo" src="logo.png" alt="Gourmet Garden">
+                <img class="logo" src="img/kvadratisk-logo_sort.webp" alt="Tothaven">
             </a>
         </div>
         <nav>
             <ul class="menu">
                 <li><a href="index.html">Forside</a></li>
-                <li><a href="bes"></a></li>
-                <li><a href="menukort.html">Menukort</a></li>
-                <li><a href="galleri.html">Galleri</a></li>
+                <li><a href="besoeg_tothaven.html">Besøg Tothaven</a></li>
+                <li><a href="ostothaven.html">Os på Tothaven</a></li>
+                <li><a href="mejeri.html">Gårdmejeri</a></li>
+                <li><a href="mentor.html">Mentorforløb</a></li>
+                <li><a href="begivenheder.html">Begivenheder</a></li>
             </ul>
             <div class="burger">
                 <div class="line"></div>
@@ -33,7 +36,7 @@
 
     <footer></footer>
 
-
+    <script src="menu.js"></script>
 </body>
 
 </html>
