1.udkast af mentor forløb og besøg tothaven (ikke færdig)

--- a/mentor.html
+++ b/mentor.html
@@ -5,7 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Francois+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Emblema+One&family=Francois+One&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="mentor.css">
 </head>
 
 <body>
@@ -32,7 +44,83 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <h1>Mentorforløb</h1>
+        <div class="hvad_er_mentor_col-2">
+            <div class="mentor_img">
+                <img src="img/mentorforloeb/file.jpg" alt="">
+            </div>
+            <div class="mentor_tekst">
+                <h2>HVAD ER MENTORFORLØB?</h2>
+                <p>I hverdagene på Tothaven tilbyder vi udviklende mentorforløb for unge mellem 15 og 30 år (ind imellem
+                    også voksne med
+                    f.eks. stress el lign.).
+
+                    Vi kalder de unge og voksne i mentor forløb for “praktikanter”, fordi de er i en slags mesterlære
+                    her på Tothaven.
+
+                    De lærer i praksis, hjælper og følger os (Jakob og Pernille) når vi passer dyrene og driver vores
+                    lille økologiske
+                    landbrug.
+
+                    Opgaver og forløb bliver tilpasset den enkelte. Det handler for os om at skabe succesoplevelser, ro,
+                    nærvær og tryghed.
+
+                    Derfor er vores erfaring også, at det fungerer bedst når der er kun er en praktikant af gangen.
+                    Nogle kommer her bare en enkelt gang om ugen i et par timer, andre kommer her hver dag i flere
+                    timer.
+
+                    Det afhænger helt af den enkeltes formåen og ofte oplever vi en stor udvikling under et
+                    mentorforløb.
+                </p>
+            </div>
+        </div>
+        <div class="hvorfor_mentorforloeb_col_2">
+            <div class="hvorfor_mentor_img">
+                <img src="img/mentorforloeb/mentorforloeb.webp" alt="">
+            </div>
+            <div class="hvorfor_mentor_tekst">
+                <h2>HVORFOR MENTORFORLØB?</h2>
+                <p>Tothavens praktikanter er her oftest i en periode af deres liv, hvor de ikke kan passe en uddannelse
+                    eller et
+                    almindeligt arbejde måske på grund af psykiske handicap, stress, angst eller lignende.
+
+                    Praktikanterne på Tothaven hjælper til med mange af de praktiske gøremål på gården. De passer
+                    kaniner,
+                    samler æg, muger
+                    ud i stalden eller hjælper til i produktionen af cremer og sæber.
+
+                    Men der bliver også brugt god tid på at tage rideture i skoven eller til at nusse med Tothavens
+                    mange dyr og
+                    dyreunger.</p>
+            </div>
+        </div>
+        <div class="pernille_jakob_col-2">
+            <div class="pernille_jakob_img">
+                <img src="img/mentorforloeb/portraetkvadrat.webp" alt="">
+            </div>
+            <div class="pernille_jakob_tekst">
+                <h2>PERNILLE OG JAKOB</h2>
+                <p>Pernille og Jakob, som driver Tothaven, er autodidakte landbrugere.
+
+                    Pernille er uddannet strikdesigner men har i flere år, inden vi åbnede Tothaven, arbejdet på et
+                    bosted for
+                    udviklingshæmmede i Hundested.
+                    Jakob er uddannet multimediedesigner, men har inden vi åbnede Tothaven, arbejdet i 10 år som
+                    SFO-leder og
+                    viceskoleleder på den lokale friskole.
+                    Arbejder du i en kommune eller på et bosted, og kender til en, der kunne have brug for at komme i et
+                    mentorforløb her på
+                    Tothaven, så kontakt Pernille for mere information:
+
+                </p>
+                <li>Mobil: 20360226</li>
+                <li>Mail:pernille@tothaven.dk</li>
+            </div>
+
+        </div>
+
+    </main>
 
     <footer></footer>
 
