--- a/besoeg_tothaven.html
+++ b/besoeg_tothaven.html
@@ -5,7 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Francois+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Emblema+One&family=Francois+One&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="besoeg_tothaven.css">
 </head>
 
 <body>
@@ -32,7 +44,11 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <h1>BESØG TOTHAVEN</h1>
+        <h2>ÅBNINGSTIDER</h2>
+        <img src="img/besoegtothaven/aabningsdage-2024.webp" alt="">
+    </main>
 
     <footer></footer>
 
