Index, 1. udkast m. alt indhold, farver og tekst, hero, individuel menu - uden footer

--- a/index.html
+++ b/index.html
@@ -5,38 +5,131 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside</title>
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="indexmenu.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Contrail+One&family=Freeman&family=Lugrasimo&family=Pragati+Narrow:wght@400;700&family=Russo+One&family=Slabo+27px&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Contrail+One&family=Francois+One&family=Freeman&family=Lugrasimo&family=Pragati+Narrow:wght@400;700&family=Russo+One&family=Slabo+27px&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Contrail+One&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Francois+One&family=Freeman&family=Inter:wght@100..900&family=Lugrasimo&family=Pragati+Narrow:wght@400;700&family=Russo+One&family=Slabo+27px&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <a href="/">
-                <img class="logo" src="img/kvadratisk-logo_sort.webp" alt="Tothaven">
-            </a>
-        </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Forside</a></li>
-                <li><a href="besoeg_tothaven.html">Besøg Tothaven</a></li>
-                <li><a href="ostothaven.html">Os på Tothaven</a></li>
-                <li><a href="mejeri.html">Gårdmejeri</a></li>
-                <li><a href="mentor.html">Mentorforløb</a></li>
-                <li><a href="begivenheder.html">Begivenheder</a></li>
-            </ul>
-            <div class="burger">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
+    <main>
+        <div class="hero-image">
+            <div class="menu">
+            <div class="logo">
+                <a href="/">
+                    <img class="logo" src="indhold/png/cropped-logo-2019_hvidt.png.webp" alt="Tothaven">
+                </a>
             </div>
-        </nav>
-    </header>
-
-    <main></main>
+            <nav>
+                <ul class="menu">
+                    <li><a class="menutekst" href="besoeg_tothaven.html">Besøg Tothaven</a></li>
+                    <li><a class="menutekst" href="mejeri.html">Gårdmejeri</a></li>
+                    <li><a class="menutekst" href="mentor.html">Mentorforløb</a></li>
+                    <li><a class="menutekst" href="begivenheder.html">Begivenheder</a></li>
+                </ul>
+                <div class="burger">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+            </nav>
+        </div>
+        <div class="grid_1-1">
+            <div>
+                <h1 class="heroh1">TOTHAVEN</h1>
+                <h2 class="heroh2">BESØGSGÅRD</h2>
+            </div>
+            <div>
+                <h1 class="heroh1_2">MAR-OKT</h1>
+            </div>
+        </div>
+        </div>
+        <div class="content-wrapper">
+            <div>
+                    <div class="grid_1-1-1">
+                        <li><a class="billetter" href="https://billetto.dk/e/entrebilletter-til-tothavens-besogsgard-billetter-890934?utm_source=billetto+advertising&utm_medium=billetto&utm_campaign=find&utm_content=3DK&vs=95a578b6-1a08-40a4-9c20-77631dc8ca9c">KØB BILLETTER</a></li>
+                        <li><a class="billetter" href="besoeg_tothaven.html">ÅBNINGSTIDER</a></li>
+                        <li><a class="billetter" href="begivenheder.html">BEGIVENHEDER</a></li>
+                    </div>
+            </div>
+            <div class="grid_1-1">
+                <div>
+                <h2>HVAD KAN DU OPLEVE PÅ TOTHAVEN?</h2>
+                <p>På Tothaven kan du møde en masse søde og sjove dyr og dyreunger. Her er kunekunegrise, uldsvin, ponyer, æsel, løbeænder, kalkuner, katte, kaniner, høns og malkegeder.</p>
+                
+                <p>Oplev gården i dit eget tempo. Hop i halmen, slap af i hængekøjerne og kæl med de mange søde dyreunger. 
+                    Det er muligt at købe en træktur på en af gårdens søde ponyer for 20 kr.</p>
+                
+                <p>Du kan også nyde en kop friskbrygget kaffe, friskbagt kage og håndlavet pindeis fra Tothavens Gårdmejeri i den lille café. Her kan du desuden købe Tothavens gedeoste, gedemælkssæber, bivokscreme og flere andre lækre sager produceret på Tothaven.</p>
+                </div>
+                <div>
+                    <img class="aesel" src="indhold/img/billede1index.jpg.webp" alt="billede">
+                </div>
+          </div>
+        </div>
+        <div class="slideContainer">
+            <div class="picture">
+                <img src="indhold/img/slide10.jpg.webp" alt="billede1">
+            </div>
+            <div class="picture">
+              <img src="indhold/img/slide2.jpg.webp" alt="billede2">
+            </div>
+            <div class="picture">
+                <img src="indhold/img/slide3.jpg.webp" alt="billede3">
+            </div>
+            <div class="picture">
+                <img src="indhold/img/slide4.jpg.webp" alt="billede4">
+            </div>
+            <div class="picture">
+                <img src="indhold/img/slide5.jpg.webp" alt="billede5">
+            </div>
+            <div class="picture">
+                <img src="indhold/img/slide6.jpg.webp" alt="billede6">
+            </div>
+            <div class="picture">
+                <img src="indhold/img/slide7.jpg.webp" alt="billede7">
+            </div>
+            <div class="picture">
+                <img src="indhold/img/slide8.jpg.webp" alt="billede8">
+            </div>
+            <div class="picture">
+                <img src="indhold/img/slide9.jpg.webp" alt="billede9">
+            </div>
+            <div class="picture">
+                <img src="indhold/img/slide1.jpg.webp" alt="billede10">
+            </div>
+            <div class="arrow">
+                <a class="previous" onclick="slideMove(-1)">&#10094;</a>
+                <a class="next" onclick="slideMove(1)">&#10095; </a>
+            </div>
+          </div>
+          <div>
+            <div class="grid_1-1">
+                <div class="ospaatothaven">
+                    <h2>OS PÅ TOTHAVEN</h2>
+                    <p>Vi, Pernille, Jakob, Martha og Andrea, har boet her siden februar 2014 hvor vi købte gården af Søren, som i mange år havde drevet den med fritids gartneri og dyrehold.</p>
+                        <p>Pernille driver sit strik firma, p.feilberg, på gården og fra gårdbutikken ved vejen sælger vi æg fra glade høns, gedeoste, gedemælksis og rabarber i sæsonen.</p>
+                       <p>Vi fik i 2018 fået tilskud fra LAG Gribskov-Halsnæs til at etablere et lille gårdmejeri og gårdbutik i en af længerne på gården.</p>
+                       <a class="LAG" href="https://lag-gribskov-halsnaes.dk">læs mere om LAG gribskov-Halsnæs</a>
+                </div>
+                <div>
+                    <img class="ostothaven" src="indhold/img/portraetkvadrat.jpg.webp" alt="ospaatothaven">
+                </div>
+            </div>
+          </div>
+    </main>
 
     <footer></footer>
 
     <script src="menu.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
