Redigering af mentorforløb og besøg tothaven

--- a/mentor.html
+++ b/mentor.html
@@ -45,25 +45,29 @@
     </header>
 
     <main>
-        <h1>Mentorforløb</h1>
+        <h1>MENTORFORLØB</h1>
         <div class="hvad_er_mentor_col-2">
             <div class="mentor_img">
-                <img src="img/mentorforloeb/file.jpg" alt="">
+                <img class="billede1" src="img/mentorforloeb/file.jpg" alt="">
             </div>
-            <div class="mentor_tekst">
+            <div class="mentor_tekst order">
                 <h2>HVAD ER MENTORFORLØB?</h2>
-                <p>I hverdagene på Tothaven tilbyder vi udviklende mentorforløb for unge mellem 15 og 30 år (ind imellem
+                <p>I hverdagene på Tothaven tilbyder vi udviklende mentorforløb for unge mellem 15 og 30 år (ind
+                    imellem
                     også voksne med
                     f.eks. stress el lign.).
 
-                    Vi kalder de unge og voksne i mentor forløb for “praktikanter”, fordi de er i en slags mesterlære
+                    Vi kalder de unge og voksne i mentor forløb for “praktikanter”, fordi de er i en slags
+                    mesterlære
                     her på Tothaven.
 
-                    De lærer i praksis, hjælper og følger os (Jakob og Pernille) når vi passer dyrene og driver vores
+                    De lærer i praksis, hjælper og følger os (Jakob og Pernille) når vi passer dyrene og driver
+                    vores
                     lille økologiske
                     landbrug.
 
-                    Opgaver og forløb bliver tilpasset den enkelte. Det handler for os om at skabe succesoplevelser, ro,
+                    Opgaver og forløb bliver tilpasset den enkelte. Det handler for os om at skabe succesoplevelser,
+                    ro,
                     nærvær og tryghed.
 
                     Derfor er vores erfaring også, at det fungerer bedst når der er kun er en praktikant af gangen.
@@ -81,7 +85,8 @@
             </div>
             <div class="hvorfor_mentor_tekst">
                 <h2>HVORFOR MENTORFORLØB?</h2>
-                <p>Tothavens praktikanter er her oftest i en periode af deres liv, hvor de ikke kan passe en uddannelse
+                <p>Tothavens praktikanter er her oftest i en periode af deres liv, hvor de ikke kan passe en
+                    uddannelse
                     eller et
                     almindeligt arbejde måske på grund af psykiske handicap, stress, angst eller lignende.
 
@@ -97,9 +102,9 @@
         </div>
         <div class="pernille_jakob_col-2">
             <div class="pernille_jakob_img">
-                <img src="img/mentorforloeb/portraetkvadrat.webp" alt="">
+                <img class="billede2" src="img/mentorforloeb/portraetkvadrat.webp" alt="">
             </div>
-            <div class="pernille_jakob_tekst">
+            <div class="pernille_jakob_tekst order">
                 <h2>PERNILLE OG JAKOB</h2>
                 <p>Pernille og Jakob, som driver Tothaven, er autodidakte landbrugere.
 
@@ -117,9 +122,16 @@
                 <li>Mobil: 20360226</li>
                 <li>Mail:pernille@tothaven.dk</li>
             </div>
-
         </div>
-
+        <div class="img_collage">
+            <img class="pic1" src="img/mentorforloeb/271610506_457150699181459_2135379958752290624_n.webp" alt="">
+            <img class="pic2" src="img/mentorforloeb/271223589_898004244244793_1357204645570468563_n.webp" alt="">
+            <img class="pic3" src="img/mentorforloeb/mentorforloeb.webp" alt="">
+            <img class="pic4" src="img/mentorforloeb/271301255_1058976554951454_3715180493664967157_n.webp" alt="">
+            <img class="pic5" src="img/mentorforloeb/271390777_3166751750210513_8992811870959695956_n.webp" alt="">
+            <img class="pic7" src="img/mentorforloeb/271443181_672111487292751_7260866264811183843_n.webp" alt="">
+            <img class="pic6" src="img/mentorforloeb/271045003_449629033553550_77100982758867989_n.webp" alt="">
+        </div>
     </main>
 
     <footer></footer>
