--- a/besoeg_tothaven.html
+++ b/besoeg_tothaven.html
@@ -47,10 +47,53 @@
     <main>
         <h1>BESØG TOTHAVEN</h1>
         <h2>ÅBNINGSTIDER</h2>
-        <img src="img/besoegtothaven/aabningsdage-2024.webp" alt="">
+        <img class="kalender" src="img/besoegtothaven/aabningsdage-2024.webp" alt="">
+        <br>
+        <!-- <p>Det koster 75,- i entré for alle gæster bortset fra børn under 2 år, der kommer gratis ind.</p> -->
+        <br>
+        <div>
+            <a class="knap_billet"
+                href="https://billetto.dk/e/entrebilletter-til-tothavens-besogsgard-billetter-890934?utm_source=billetto+advertising&utm_medium=billetto&utm_campaign=find&utm_content=3DK&vs=92771906-df43-43f3-b21d-c9408b006a0e">KØB
+                BILLET</a>
+        </div>
+        <div>
+            <a class="knap_årskort"
+                href=" https://billetto.dk/e/arskort-til-tothaven-billetter-892725?utm_source=billetto+advertising&utm_medium=billetto&utm_campaign=find&utm_content=1DK&vs=48805a88-cc2d-494d-88ce-51326811dd32">KØB
+                ÅRSKORT</a>
+        </div>
+
+        <div class="grid_1-1">
+            <div>
+                <h2>PARKERING</h2>
+                <p>Biler kan parkeres på marken kør ind fra Torupvejen se skiltning Er der fyldt på marken er det muligt
+                    at
+                    parkere på
+                    pladsen foran gården</p>
+                <br>
+                <br>
+                <h2>BEMÆRK</h2>
+                <p>Bemærk det ikke er tilladt at medbringe hunde på besøgsgården, da vi har fritgående dyr.</p>
+            </div>
+            <div>
+                <h2 class="kort_text">KORT OVER TOTHAVEN</h2>
+                <img class="kort_over_tot" src="img/besoegtothaven/KORT-2024.webp" alt="">
+            </div>
+        </div>
+        <br>
+        <br>
+        <div>
+            <h2 class="find_os_text">FIND OS</h2>
+            <img class="find_os_img" src="img/besoegtothaven/Screenshot 2024-05-27 at 09.10.01.webp" alt="">
+        </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/skCw9eXc2_g?si=uykP8BJxZvtDmp51"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </main>
 
-    <footer></footer>
+    <footer>
+
+    </footer>
 
     <script src="menu.js"></script>
 </body>
