Index, 3. udkast - ændring i css variabel m. h1, og tilføjelse af login javascript

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Contrail+One&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Emblema+One&family=Francois+One&family=Freeman&family=Inter:wght@100..900&family=Lugrasimo&family=Pragati+Narrow:wght@400;700&family=Russo+One&family=Slabo+27px&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Contrail+One&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Emblema+One&family=Francois+One&family=Freeman&family=Inter:wght@100..900&family=Lugrasimo&family=Pragati+Narrow:wght@400;700&family=Russo+One&family=Slabo+27px&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -129,7 +132,7 @@
     </main>
 
     <footer></footer>
-
+    <script src="login.js"></script>
     <script src="menu.js"></script>
     <script src="index.js"></script>
 </body>
