sidste Redigering af mentorforløb og besøg tothaven

--- a/begivenheder.html
+++ b/begivenheder.html
@@ -158,6 +158,7 @@
             <a class="facebook"
                 href="https://www.facebook.com/tothavens/posts/pfbid0568TaW1bbHYTJQ4W9bJfwypCW5gXqq945NAdVkF48DRSmqa2ZjxjypUmcLwknb6il?ref=embed_page">Facebook</a>
         </div>
+        </div>
 
         <div class="adresse">
             <p>Tothaven</p>
