--- a/mentor.html
+++ b/mentor.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forside</title>
+    <meta name="robots" content="noindex">
+    <title>Mentor forløb</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap" rel="stylesheet">
@@ -46,6 +47,7 @@
 
     <main>
         <h1>MENTORFORLØB</h1>
+        <div class="boks"></div>
         <div class="hvad_er_mentor_col-2">
             <div class="mentor_img">
                 <img class="billede1" src="img/mentorforloeb/file.jpg" alt="">
@@ -105,7 +107,7 @@
                 <img class="billede2" src="img/mentorforloeb/portraetkvadrat.webp" alt="">
             </div>
             <div class="pernille_jakob_tekst order">
-                <h2>PERNILLE OG JAKOB</h2>
+                <h2>PERNILLE & JAKOB</h2>
                 <p>Pernille og Jakob, som driver Tothaven, er autodidakte landbrugere.
 
                     Pernille er uddannet strikdesigner men har i flere år, inden vi åbnede Tothaven, arbejdet på et
@@ -117,10 +119,10 @@
                     Arbejder du i en kommune eller på et bosted, og kender til en, der kunne have brug for at komme i et
                     mentorforløb her på
                     Tothaven, så kontakt Pernille for mere information:
-
                 </p>
-                <li>Mobil: 20360226</li>
-                <li>Mail:pernille@tothaven.dk</li>
+                <p>Mobil: 20360226</p>
+                <p>Mail: pernille@tothaven.dk</p>
+
             </div>
         </div>
         <div class="img_collage">
