--- a/mejeri.html
+++ b/mejeri.html
@@ -4,8 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forside</title>
+    <meta name="robots" content="noindex">
+    <title>Mejeri</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Francois+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Emblema+One&family=Francois+One&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="mejeri.css">
 </head>
 
 <body>
@@ -32,7 +45,147 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <h1>Gårdbutikken</h1>
+        <h2 class="gaardbutik_overskrift">TOTHAVENS GÅRDBUTIK</h2>
+        <p class="gaardbutik_p">I Tothavens selvbetjente gårdbutik finder du i sommerhalvåret (marts til november)
+            gedeoste, Yoghurt og
+            håndlavede
+            pindeis. Desuden har vi hele året dagfriske æg fra vores egne høns, gedemælkssæber og bivokscreme. 
+            Butikken har åbent alle dage fra kl 8-20.
+
+            Læs mere om det vi producerer på Tothaven nedenfor.
+
+            Vi pakker alle vores oste og andre mejerivarer i Weckglas. Når du køber en vare på glas i gårdbutikken,
+            betaler du 10,-
+            i pant for glasset. Næste gang du kommer, kan du aflevere det tomme og rengjorte glas inkl. låg og klips i
+            kassen under
+            bordet i gårdbutikken og trække 10,- kroner fra dit næste køb.
+            Vi rengør og desinficerer glassene og genbruger dem. På den måde undgår vi en masse engangsemballage som
+            ellers bare
+            ville være blevet smidt ud.</p>
+        <div class="image"> <img src="img/mejeri/gårdbutik.webp" alt="Gårdbutik">
+        </div>
+        <h2 class="gaardbutik_center"> Vi sælger mejeriprodukter i sommerhalvåret samt dagfriske æg fra egne høns året
+            rundt</h2>
+
+        <h2>GÅRDMEJERIET</h2>
+        <div class="box1"></div>
+        <article>
+            <div class="image1"> <img src="img/mejeri/gedeost.webp" alt="Gedeost">
+            </div>
+            <div class="image2"> <img src="img/mejeri/gedemælksis.webp" alt="Gedemælksis">
+            </div>
+            <div class="text1">
+                <h3>Bag om Mejeriet</h3>
+                <p>Mejeriprodukterne er baseret på friskmalket gedemælk fra vores 15 malkegeder. Vi malker 8 måneder om
+                    året, fra april til
+                    november. Her er mælken bedst da gederne har mulighed for at være meget ude og spise græs. 
+
+                    2 måneder inden og efter gederne har fået kid er de helt fri for at blive malket. Når kiddene er 3
+                    måneder flytter de
+                    hjemmefra og ud til et stort naturområde på Melby overdrev hvor de hjælper med at holde trævæksten
+                    nede.
+
+                    I mejeriet, kun 50 meter fra gedernes stald, bliver mælken nænsomt pasteuriseret hvorefter den
+                    bliver omdannet til
+                    enten, ost, yoghurt eller is.</p>
+            </div>
+            <div class="image3"> <img src="img/mejeri/mejeri.webp" alt="Mejeri">
+            </div>
+        </article>
+
+        <h2>UDVALG AF GEDEOSTE</h2>
+        <div class="section1">
+            <div class="image4 "> <img src="img/mejeri/lillehvide.webp" alt="Lille Hvide"></div>
+            <div class="text2 order">
+                <h3>Tothavens lille hvide</h3>
+                <p>Vores hvidskimmelost er lavet på frisk gedemælk, syrnet med kefir og modnet i glasset. Osten er blød
+                    og cremet udenpå
+                    med en lille fast kerne. Den sælges fra en modningsalder på 2 uger hvor den har en relativt mild
+                    smag der kan få selv
+                    gedeosteforskrækkede til at elske gedeost. Ved længere tids lagring vil den få mere karakter og
+                    kraftigere smag.
+                </p>
+                <p>
+                    // Tothavens lille hvide blev kåret som bedste gedeost og fik en samlet 3. plads ved
+                    smagskonkurrencen Nordisk
+                    ostefestival 2019
+
+                    // Ved Gourmetprisen 2022 var den finalist - men måtte se sig overgået af Arla unikas “Hallands
+                    Himmel.”</p>
+            </div>
+        </div>
+        <div class="section2">
+            <div class="image5"> <img src="img/mejeri/krydder.webp" alt="Frisk gedeost i krydderolie"></div>
+            <div class="text3">
+
+                <h3>Frisk gedeost i krydderolie</h3>
+                <p>En dejlig frisk og syrlig ost, som tager smag fra de krydderier den får selskab af i glasset som er
+                    god til at bruge på
+                    brød, i salaten eller i pastaretten.
+
+                    Vi laver denne ost i 3 varianter// Rosmarin, rosa peber og fennikel
+                    // Hvidløg, timian og tørret tomat// Enebær, rosmarin og blå kornblomst</p>
+            </div>
+        </div>
+        <div class="section3">
+            <div class="image6 "> <img src="img/mejeri/friskost.webp" alt="Friskost"></div>
+            <div class="text4 order">
+                <h3>Pisket Friskost</h3>
+                <p>En helt frisk og let drænet ost saltet med flagesalt. Denne ost producerer vi kun til engrossalg. Men
+                    du kan ofte smage
+                    den på Rarbarbergården i Holløse og Restaurant Knud i Hundested Havn</p>
+            </div>
+        </div>
+
+
+        <h2>GEDEMÆLKS-PINDEIS</h2>
+        <p>Tothavens pindeis er inspireret af den italienske Gelato-tradition. Mælkeisene laver vi på basis af
+            friskmalket mælk fra
+            Tothavens geder, æggeblommer fra Tothavens æg, fløde fra Øllingegård og økologisk sukker fra de Lollandske
+            roemarker.
+            Sorbeterne er lavet af danske økologiske frugter og bær. Vi overtrækker alle isene med god økologisk
+            chokolade fra de
+            Hollandske chokoladekonger Original Beans .
+            Alle vores pindeis laver vi i en stor og en lille udgave – så der både er til den store og lille is-sult.
+        </p>
+        <div class="image7"> <img src="img/mejeri/gedeis.webp" alt="Gedemælksispinde"> </div>
+
+        <h2>ANDRE MEJERIPRODUKTER</h2>
+        <div class="box2"></div>
+        <div class="section4">
+            <div>
+                <img class="image8" src="img/mejeri/gedeyog.webp" alt="Gedeyogurt">
+                <h3>Drænet Gedeyogurt</h3>
+                <p>Vores drænede gedemælksyoghurt er en fed og tæt yoghurt som fungere godt til morgenmaden, men også i
+                    dressinger eller
+                    som erstatning for cremefraiche.
+                    Da vi dræner yoghurten helt ind til ca 1/3 del er liter prisen også i den høje ende. Til gengæld
+                    behøver
+                    man
+                    kun ½
+                    portion til morgenmaden for at blive mæt.</p>
+            </div>
+
+
+            <div>
+                <img class="image9" src="img/mejeri/cajeta.webp" alt="Cajeta">
+                <h3>Cajeta</h3>
+                <p>Cajeta er den mexicanske version af Dulce de leche. Det er en specialitet som vi har lært at kende
+                    gennem
+                    vores
+                    Chilenske ven Alex. Vi laver den ved at koge frisk gedemælk, sukker og vanilje ind til det bliver en
+                    lysebrun
+                    karamelliseret creme. Cajeta fungerer fortrinligt oven på den drænede gedemælksyoghurt, til dessert
+                    henover
+                    en
+                    vaniljeis, på pandekager eller i iskaffen som du kan smage på varme sommerdage i vores café.
+
+                    Vi laver Cajeta i 3 forskellige udgaver: vanilje, havsalt og chokolade</p>
+            </div>
+        </div>
+    </main>
 
     <footer></footer>
 
