--- a/mentor.html
+++ b/mentor.html
@@ -17,8 +17,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Emblema+One&family=Francois+One&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="mentor.css">
+
 </head>
 
 <body>
@@ -32,7 +34,6 @@
             <ul class="menu">
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="besoeg_tothaven.html">Besøg Tothaven</a></li>
-                <li><a href="ostothaven.html">Os på Tothaven</a></li>
                 <li><a href="mejeri.html">Gårdmejeri</a></li>
                 <li><a href="mentor.html">Mentorforløb</a></li>
                 <li><a href="begivenheder.html">Begivenheder</a></li>
@@ -136,7 +137,45 @@
         </div>
     </main>
 
-    <footer></footer>
+
+    <footer>
+        <div>
+            <p class="kontakt">kontakt</p>
+            <p class="info">
+                jakob@tothaven.dk
+                <br>
+                +45 30 70 58 36
+                <br>
+                pernille@tothaven.dk
+                <br>
+                +45 20 36 02 26
+                <br>
+            </p>
+
+            <p class="follow">følg os</p>
+            <a class="insta" href="https://www.instagram.com/_tothaven_/">Instagram</a>
+            <a class="facebook"
+                href="https://www.facebook.com/tothavens/posts/pfbid0568TaW1bbHYTJQ4W9bJfwypCW5gXqq945NAdVkF48DRSmqa2ZjxjypUmcLwknb6il?ref=embed_page">Facebook</a>
+        </div>
+        <div class="adresse">
+            <p>Tothaven</p>
+            <p>Torupvejen 2,</p>
+            <p>3390 Hundested</p>
+            <p>Danmark</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <p class="cvr">CVR: 39103060</p>
+        </div>
+        <div>
+            <a href="https://www.findsmiley.dk/772125"><img class="smiley" src="img/happy.png" alt="happy"></a>
+        </div>
+
+    </footer>
+
+
 
     <script src="menu.js"></script>
 </body>
