--- a/begivenheder.html
+++ b/begivenheder.html
@@ -21,15 +21,17 @@
         rel="stylesheet">
     <meta name="robots" content="noindex">
     <title>Begivenheder</title>
+    <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="begivenheder.css">
+
 </head>
 
 <body>
     <header>
         <div class="logo">
             <a href="/">
-                <img class="logo" src="img/kvadratisk-logo_sort.webp" alt="Tothaven">
+                <img class="logo" src="img/mejeri/kvadratisk-logo_sort.webp" alt="Tothaven">
             </a>
         </div>
         <nav>
