--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
             <br>
             <p class="cvr">CVR: 39103060</p>
         </div>
-        <div>
+        <div class="smiley_box">
             <a href="https://www.findsmiley.dk/772125"><img class="smiley" src="img/happy.png" alt="happy"></a>
         </div>
     </footer>
-    
+
     <script src="login.js"></script>
     <script src="menu.js"></script>
     <script src="index.js"></script>
