--- a/mentor.html
+++ b/mentor.html
@@ -169,7 +169,7 @@
             <br>
             <p class="cvr">CVR: 39103060</p>
         </div>
-        <div>
+        <div class="smiley_box">
             <a href="https://www.findsmiley.dk/772125"><img class="smiley" src="img/happy.png" alt="happy"></a>
         </div>
 
