--- a/mejeri.html
+++ b/mejeri.html
@@ -34,7 +34,6 @@
             <ul class="menu">
                 <li><a href="index.html">Forside</a></li>
                 <li><a href="besoeg_tothaven.html">Besøg Tothaven</a></li>
-                <li><a href="ostothaven.html">Os på Tothaven</a></li>
                 <li><a href="mejeri.html">Gårdbutikken</a></li>
                 <li><a href="mentor.html">Mentorforløb</a></li>
                 <li><a href="begivenheder.html">Begivenheder</a></li>
@@ -49,6 +48,7 @@
 
     <main>
         <h1>GÅRDBUTIKKEN</h1>
+        <div class="box"></div>
         <h2 class="gaardbutik_overskrift">TOTHAVENS GÅRDBUTIK</h2>
         <p class="gaardbutik_p">I Tothavens selvbetjente gårdbutik finder du i sommerhalvåret (marts til november)
             gedeoste, Yoghurt og
