--- a/begivenheder.html
+++ b/begivenheder.html
@@ -52,7 +52,7 @@
 
     <main>
 
-        <h1>BEGIVENHEDER</h1>
+        <h1 class="bevigenhederoverksrift">BEGIVENHEDER</h1>
 
         <div class="grid_musik">
             <div class="textmusik">
