--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
 
         <div class="adresse">
-            <p> Tothaven
+            <p class="adresse"> Tothaven
                 <br>
                 Torupvejen 2,
                 <br>
