tilføjelse af nye billeder i slideshow + gøre menuen flex

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <img src="indhold/img/slide4.jpg" alt="billede4">
             </div>
             <div class="picture">
-                <img src="indhold/img/slide5.jpg.webp" alt="billede5">
+                <img src="indhold/img/slide5.jpg" alt="billede5">
             </div>
             <div class="picture">
                 <img src="indhold/img/slide6.jpg.webp" alt="billede6">
