--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="menu">
             <div class="logo">
                 <a href="/">
-                    <img class="logo" src="indhold/png/cropped-logo-2019_hvidt.png.webp" alt="Tothaven">
+                    <img class="logo" src="img/index/cropped-logo-2019_hvidt.png.webp" alt="Tothaven">
                 </a>
             </div>
             <nav>
@@ -75,40 +75,40 @@
                 <p>Du kan også nyde en kop friskbrygget kaffe, friskbagt kage og håndlavet pindeis fra Tothavens Gårdmejeri i den lille café. Her kan du desuden købe Tothavens gedeoste, gedemælkssæber, bivokscreme og flere andre lækre sager produceret på Tothaven.</p>
                 </div>
                 <div>
-                    <img class="aesel" src="indhold/img/billede1index.jpg.webp" alt="billede">
+                    <img class="aesel" src="img/index/billede1index.jpg.webp" alt="billede">
                 </div>
           </div>
         </div>
         <div class="slideContainer">
             <div class="picture">
-                <img src="indhold/img/slide10.jpg.webp" alt="billede1">
+                <img src="img/index/slide10.jpg.webp" alt="billede1">
             </div>
             <div class="picture">
-              <img src="indhold/img/slide2.jpg.webp" alt="billede2">
+              <img src="img/index/slide2.jpg.webp" alt="billede2">
             </div>
             <div class="picture">
-                <img src="indhold/img/slide3.jpg.webp" alt="billede3">
+                <img src="img/index/slide3.jpg.webp" alt="billede3">
             </div>
             <div class="picture">
-                <img src="indhold/img/slide4.jpg" alt="billede4">
+                <img src="img/index/slide4.jpg" alt="billede4">
             </div>
             <div class="picture">
-                <img src="indhold/img/slide5.jpg" alt="billede5">
+                <img src="img/index/slide5.jpg" alt="billede5">
             </div>
             <div class="picture">
-                <img src="indhold/img/slide6.jpg.webp" alt="billede6">
+                <img src="img/index/slide6.jpg.webp" alt="billede6">
             </div>
             <div class="picture">
-                <img src="indhold/img/slide7.jpg.webp" alt="billede7">
+                <img src="img/index/slide7.jpg.webp" alt="billede7">
             </div>
             <div class="picture">
-                <img src="indhold/img/slide8.jpg.webp" alt="billede8">
+                <img src="img/index/slide8.jpg.webp" alt="billede8">
             </div>
             <div class="picture">
-                <img src="indhold/img/slide9.jpg.webp" alt="billede9">
+                <img src="img/index/slide9.jpg.webp" alt="billede9">
             </div>
             <div class="picture">
-                <img src="indhold/img/slide1.jpg.webp" alt="billede10">
+                <img src="img/index/slide1.jpg.webp" alt="billede10">
             </div>
             <div class="arrow">
                 <a class="previous" onclick="slideMove(-1)">&#10094;</a>
@@ -125,7 +125,7 @@
                        <p>Vi fik i 2018 fået tilskud fra LAG Gribskov-Halsnæs til at etablere et lille gårdmejeri og gårdbutik i en af længerne på gården.</p>
                 </div>
                 <div>
-                    <img class="ostothaven" src="indhold/img/portraetkvadrat.jpg.webp" alt="ospaatothaven">
+                    <img class="ostothaven" src="img/index/portraetkvadrat.jpg.webp" alt="ospaatothaven">
                 </div>
             </div> 
           </div>
