rettelse af bogstaver i mappestruktur

--- a/mejeri.html
+++ b/mejeri.html
@@ -65,7 +65,7 @@
             Vi rengør og desinficerer glassene og genbruger dem. På den måde undgår vi en masse engangsemballage som
             ellers bare
             ville være blevet smidt ud.</p>
-        <div class="image"> <img src="img/mejeri/gårdbutik.webp" alt="Gårdbutik">
+        <div class="image"> <img src="img/mejeri/gaardbutik.webp" alt="Gårdbutik">
         </div>
         <h2 class="gaardbutik_center"> Vi sælger mejeriprodukter i sommerhalvåret samt dagfriske æg fra egne høns året
             rundt</h2>
