--- a/mentor.html
+++ b/mentor.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/">
+            <a href="index.html">
                 <img class="logo" src="img/mejeri/kvadratisk-logo_sort.webp" alt="Tothaven">
             </a>
         </div>
