--- a/besoeg_tothaven.html
+++ b/besoeg_tothaven.html
@@ -48,7 +48,7 @@
 
     <main>
         <h1>BESØG TOTHAVEN</h1>
-        <h2>ÅBNINGSTIDER</h2>
+        <h2 class="åbningstider">ÅBNINGSTIDER</h2>
         <div class="boks"></div>
         <img class="kalender" src="img/besoegtothaven/aabningsdage-2024.webp" alt="">
         <br>
